# tarxiv

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  todo.md
.github/workflows/: docker.yml  integration_test.yml  linter.yml  run_test.yml
alembic/: env.py
alembic/versions/: 20260512_01_initial_relational_schema.py
aux/: api_search_example.json  config.yml  config.yml.sample  schema.json  sources.json  tarxiv_logstash.conf
aux/citations/: alerce.bib  antares.bib  asas-sn.bib  asas-sn_skypatrol.bib  atlas.bib  atlas_twb.bib  fink-lsst.bib  fink.bib  fink_ztf.bib  lasair.bib  lsst.bib  mangrove.bib  sherlock.bib  tns.bib  ztf.bib
docs/: deploy.md  orm-user-tags-plan.md
docs/dev-notes/: new-sample-2.json  new_sample.json  object-page-schema-updates.md  old_sample.json  orm-dashboard-polish-plan.md  orm-user-tags-plan.md  orm-user-tags-status.md
email_server/: docker-compose.original.yml  docker-compose.yml  imap_full_browse.py  imap_simple_browse.py  mailu.env  manually_add_email.sh
examples/: Tarxiv_API.ipynb  Tarxiv_Pipeline.ipynb  hopskotch_alert_monitoring.py  imap_parse.ipynb  imap_parse.py  supabase_example.py
scripts/: backup.crontab.example  backup_postgres.sh  db_utils.py  supabase_admin.py
setup/: .env.sample  .env.supabase.example  ORCID_README.md  README.md  SUPABASE_README.md  docker-compose.sandbox.yml  docker-compose.yml  entrypoint.sh  init_server.sh  kibana.yml  postgres-init.sql  prometheus.yml  supabase-init.sql  supabase-kong.yml  tarxiv_logstash.conf
setup/couchbase/: docker-compose.yml  init_server.sh
setup/elasticsearch/: lib.sh
setup/elk/: docker-compose.yml  kibana.yml  lib.sh  tarxiv_logstash.conf
setup/nginx/: default.conf
setup/redis/: docker-compose.yml
setup/roles/: logstash_writer.json
tarxiv/: alerts.py  api.py  dashboard.py  data_sources.py  database.py  database_user.py  dto.py  models.py  openapi.py  orm.py  pg_database.py  pipeline.py  schemas.py  utils.py
tarxiv/auth/: README.md  __init__.py  orcid_client.py  supabase_client.py  token_utils.py  typing.py
tarxiv/auth/providers/: __init__.py  orcid.py
tarxiv/dashboard/: __init__.py  app.py  schemas.py  styles.py
tarxiv/dashboard/assets/: cone_aladin.js
tarxiv/dashboard/callbacks/: __init__.py  auth_callbacks.py  cookie_callbacks.py  plotting_callbacks.py  search_callbacks.py  style_callbacks.py
tarxiv/dashboard/components/: __init__.py  auth.py  cards.py  cookies.py  plots.py  search.py  theme_manager.py
tarxiv/dashboard/layouts/: __init__.py  main_layout.py
tarxiv/dashboard/pages/: alerts.py  cone.py  home.py  lightcurve.py  tagged.py  user.py
tarxiv/metabroker/: detections.py
tarxiv/tests/: conftest.py  couchbase-docker-setup.sh  test_alerts.py  test_api.py  test_auth.py  test_dashboard_cone.py  test_dashboard_lightcurve.py  test_dashboard_plots.py  test_dashboard_tagged.py  test_dashboard_user.py  test_database.py  test_database_user_integration.py  test_db_utils.py  test_dto.py  test_openapi.py  test_pipeline.py
tarxiv/xmatch/: __init__.py  finders.py  listeners.py
